# beta-database-SQLparse

./: CMakeLists.txt  MyDataBase.msql  ToDo.md
example/: comands.msql
lib/: CMakeLists.txt  MyCoolDB.cpp  MyCoolDB.h  ParserSQL.cpp  ParserSQL.h  working_with_string.cpp  working_with_string.h
tests/: CMakeLists.txt  DB_tests.cpp
